simplify run task configuration