@@ -27,15 +27,13 @@ application {
     mainClass.set("fr.euphyllia.fidorial.server.Main")
 }
 
-tasks.named<JavaExec>("run") {
+tasks.run {
     description = "Spin up a test server without assembling a jar"
     standardInput = System.`in`
     classpath(sourceSets.main.map { it.runtimeClasspath })
     workingDir = project.file("run")
     workingDir.mkdirs()
-}
-
-tasks.named("run") {
+    jvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
     dependsOn(":fidorial-test-plugin:build")
 }
 
